Adding websphere deploy issues section, trying to add TOC